--- a/LROC2Mesh/LROC2Mesh.vcxproj.filters
+++ b/LROC2Mesh/LROC2Mesh.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="DigitalTerrainModel.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="MeshGenerator.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DigitalTerrainModel.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="MeshGenerator.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
