--- a/LROC2Mesh/LROC2Mesh.vcxproj
+++ b/LROC2Mesh/LROC2Mesh.vcxproj
@@ -141,6 +141,7 @@
   <ItemGroup>
     <ClInclude Include="DigitalTerrainModel.h" />
     <ClInclude Include="MeshGenerator.h" />
+    <ClInclude Include="stb_image_write.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
