--- a/LROC2Mesh/LROC2Mesh.vcxproj.filters
+++ b/LROC2Mesh/LROC2Mesh.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClInclude Include="MeshGenerator.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="stb_image_write.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
